--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,6 +36,9 @@ android {
     }
 }
 
+//def volley_version = "1.1.1"
+def gson_version = "2.10"
+
 dependencies {
 
     implementation 'androidx.core:core-ktx:1.7.0'
@@ -48,4 +51,10 @@ dependencies {
 
     implementation 'com.github.bumptech.glide:glide:4.13.2'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.13.2'
+
+    // Volley
+    //implementation "com.android.volley:volley:$volley_version"
+
+    // Gson
+    implementation "com.google.code.gson:gson:$gson_version"
 }
