--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,8 +36,9 @@ android {
     }
 }
 
-//def volley_version = "1.1.1"
+def volley_version = "1.1.1"
 def gson_version = "2.10"
+def lifecycle_version = "2.5.0"
 
 dependencies {
 
@@ -45,6 +46,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.5.1'
     implementation 'com.google.android.material:material:1.7.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'com.android.volley:volley:1.2.1'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.4'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.0'
@@ -53,7 +55,10 @@ dependencies {
     annotationProcessor 'com.github.bumptech.glide:compiler:4.13.2'
 
     // Volley
-    //implementation "com.android.volley:volley:$volley_version"
+    implementation "com.android.volley:volley:$volley_version"
+
+    // ViewModel
+    implementation("androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version")
 
     // Gson
     implementation "com.google.code.gson:gson:$gson_version"
