--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         tools:targetApi="31"
         android:usesCleartextTraffic="true">
         <activity
-            android:name=".ContenedorActivity"
+            android:name=".mainModule.ContenedorActivity"
             android:exported="false">
             <meta-data
                 android:name="android.app.lib_name"
